<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="add_expense">Add Expense</string>
    <string name="today_s_date">Today\'s Date</string>
    <string name="select_date">Select Date</string>
    <string name="expense">Expense</string>
    <string name="expense_by">Expense By</string>
    <string name="description">Description</string>
    <string name="view_expense">View Expense</string>
    <string name="save">Save</string>
    <string name="transaction">Transaction</string>
    <string name="monthly_expense_summary">Monthly Expense Summary</string>
    <string name="search">Search</string>
    <string name="select_month_year"><![CDATA[Select Month & Year]]></string>
    <string name="view_summary">View Summary</string>
    <string name="month_summary">Month Summary</string>
    <string name="clear">Clear</string>
</resources>