<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.addexpense.AddExpenseActivity">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:orientation="horizontal"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_expense"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black_secondary"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@null"
            android:padding="@dimen/_8sdp">

    <CheckBox
        android:id="@+id/check_today_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_4sdp"
        android:buttonTint="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/today_s_date"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@+id/et_expense_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_expense_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/select_date"
        android:paddingHorizontal="@dimen/_4sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white_secondary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/check_today_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/check_today_date"
        app:layout_constraintTop_toTopOf="@+id/check_today_date" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_expense_layout"
        style="Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:textColorHint="@color/white_secondary"
        android:backgroundTint="@color/black_secondary"
        app:layout_constraintTop_toBottomOf="@+id/check_today_date"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/expense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_expense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"
            android:inputType="numberDecimal"
            android:drawablePadding="@dimen/_8sdp"
            android:drawableStart="@drawable/ic_currency"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_expense_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_by"
        android:textColor="@color/white"
        android:background="@null"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="@dimen/_14ssp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_expense_layout"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1.5dp"
        android:background="@color/white"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_expense_by"
        app:layout_constraintBottom_toBottomOf="@+id/tv_expense_by"
        app:layout_constraintStart_toEndOf="@id/tv_expense_by"/>

    <RadioGroup
        android:id="@+id/radio_group_expense_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_expense_by">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cash"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:buttonTint="@color/white"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="UPI"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:buttonTint="@color/white"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Both"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:buttonTint="@color/white"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Card"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/white"
            android:buttonTint="@color/white"/>

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/drawable_shape_cornercut_black"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:gravity="top"
        android:hint="@string/description"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="@color/white_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_expense_by"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_expense"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="@dimen/_4sdp"
        android:text="@string/add_expense"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="@dimen/_14ssp"
        android:layout_margin="@dimen/_8sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>