<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_secondary"
    tools:context=".views.monthexpense.MonthExpenseActivity">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include android:id="@+id/header" layout="@layout/layout_header" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintBottom_toBottomOf="@+id/header_layout"/>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp">

            <TextView
                android:id="@+id/tv_label_month_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/select_month_year"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/month_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:theme="@style/SpinnerDropdownStyle"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:background="@drawable/shape_cornercut_white_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_month_year"
                app:layout_constraintEnd_toStartOf="@+id/year_spinner"/>

            <Spinner
                android:id="@+id/year_spinner"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:theme="@style/SpinnerDropdownStyle"
                android:layout_marginStart="@dimen/_3sdp"
                android:background="@drawable/shape_cornercut_white_secondary"
                app:layout_constraintStart_toEndOf="@+id/month_spinner"
                app:layout_constraintTop_toTopOf="@+id/month_spinner"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/search"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_4sdp"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@+id/month_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_label_month_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="Total Month Expense : "
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_search" />

            <TextView
                android:id="@+id/tv_month_expense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="0.0"
                app:drawableStartCompat="@drawable/ic_currency"
                android:textColor="@color/green"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_8sdp"
                app:layout_constraintStart_toEndOf="@+id/tv_label_month_expense"
                app:layout_constraintTop_toTopOf="@+id/tv_label_month_expense"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/summary_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_4sdp"
                android:paddingHorizontal="@dimen/_8sdp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_2sdp"
                android:background="@drawable/shape_cornercut_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_month_expense">

                <CheckBox
                    android:id="@+id/check_view_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:buttonTint="@color/white"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/month_summary"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

                <View
                    android:id="@+id/summary_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@color/white"/>


                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:visibility="gone"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />

                <LinearLayout
                    android:id="@+id/export_summary_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_export_summary"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_42sdp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="Export Summary"
                        android:backgroundTint="@color/green"
                        android:textSize="@dimen/_12ssp"
                        app:cornerRadius="@dimen/_4sdp"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/_4sdp" />

                    <TextView
                        android:id="@+id/tv_helper_export_summary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Export your all the monthly expenses into a single frame.\nRemember : You will not be able to expand your expenses again."
                        android:textColor="@color/white_secondary"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_expenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/summary_layout"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>